--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,11 +102,11 @@
     "try_again_later": "Try again later"
   },
   "escrow_verification": {
-    "complete_healthcheck": "Complete Healthcheck",
     "complete": {
       "body": "You’re helping contain the spread of the virus and protect others in your community and beyond.",
       "title": "Thanks for keeping everyone safe!"
     },
+    "complete_healthcheck": "Complete Healthcheck",
     "error": {
       "invalid_phone_number": "Phone number must be 10 digits",
       "rate_limit": "You've reach the daily submission limit. Please try again in 24 hours."
@@ -174,24 +174,24 @@
     "symptom_onset": {
       "did_you_have_symptoms": "Did you have any symptoms?",
       "knowing_symptoms": "Knowing if you’ve had COVID-19 symptoms, and when they started, can help identify the days when you were infectious (including days before your symptoms started).",
-      "symptoms_include": "Symptoms include",
       "no_i_didnt_have": "No, I didn't have any symptoms",
       "symptoms": "Symptoms",
-      "when_did_your_symptoms": "When did your symptoms begin?",
-      "yes_i_did_have": "Yes, I did have symptoms",
+      "symptoms_include": "Symptoms include",
       "symptoms_list": {
-        "fever": "Fever or chills",
-        "cough": "Cough",
-        "shortness_of_breath": "Shortness of breath or difficulty breathing",
-        "fatigue": "Fatigue",
-        "muscle_aches": "Muscle or body aches",
-        "headaches": "Headache",
-        "loss_of_taste_smell": "New loss of taste or smell",
-        "sore_throat": "Sore throat",
         "congestion": "Congestion or runny nose",
+        "cough": "Cough",
+        "diarrhea": "Diarrhea",
+        "fatigue": "Fatigue",
+        "fever": "Fever or chills",
+        "headaches ": "Headache",
+        "loss_of_taste_smell": "New loss of taste or smell",
+        "muscle_aches": "Muscle or body aches",
         "nausea": "Nausea or vomiting",
-        "diarrhea": "Diarrhea"
-      }
+        "shortness_of_breath": "Shortness of breath or difficulty breathing",
+        "sore_throat": "Sore throat"
+      },
+      "when_did_your_symptoms": "When did your symptoms begin?",
+      "yes_i_did_have": "Yes, I did have symptoms"
     },
     "verification_code_info": {
       "contact_at": "You may also call the {{healthAuthorityName}} at",
@@ -268,7 +268,6 @@
     "your_device_is_scanning": "Your device is scanning for exposures and will continue to do so even if you close the app."
   },
   "home": {
-    "bluetooth_info_body": "Your phone detects other phones you spend time in close contact with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
       "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "location_disabled_error_message": "To activate the Exposure Notification technology, authorize Location access in the Settings app",
@@ -282,6 +281,7 @@
       "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
+    "bluetooth_info_body": "Your phone detects other phones you spend time in close contact with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "call_emergency_services": "Call Emergency Services",
     "check_if_your_symptoms": "Enter your symptoms and get an instant recommendation on how to stay safe.",
     "complete_healthcheck": "Complete Healthcheck",
@@ -352,7 +352,6 @@
     "notification_subheader3": "This app does not protect you from COVID-19 infection.",
     "please_read_the": "Please read the ",
     "privacy_policy": "Privacy Policy",
-    "protect_privacy_button": "How we protect your privacy",
     "protect_privacy": {
       "body_1": "These IDs do not contain any personal information and change every 10-20 minutes to protect your identity.",
       "body_2": "Phones swap random IDs with other devices using Bluetooth Low Energy. This allows {{applicationName}} to keep track of your daily encounters anonymously, even when you don’t have it open on your device.",
@@ -370,6 +369,7 @@
       "subheader_4": "Each phone periodically communicates with the server for the list of flagged IDs and looks for matches",
       "subheader_5": "You will be notified if {{applicationName}} finds a positive match with a flagged ID"
     },
+    "protect_privacy_button": "How we protect your privacy",
     "proximity_tracing_already_active": "Exposure notifications are active",
     "proximity_tracing_body1": "If smartphones with the app installed are turned on, have bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_body2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted after 14 days.",
@@ -535,24 +535,6 @@
     "share_anonymized_data": "Share anonymized data",
     "sharing_anonymized_data": "Sharing anonymized data"
   },
-  "symptom_history": {
-    "did_not_feel_well": "You did not feel well",
-    "errors": {
-      "updating_symptoms": "Sorry, we could not update your symptoms"
-    },
-    "felt_well": "You felt well",
-    "no_entry": "No entry",
-    "no_symptoms": "No symptoms",
-    "share_history": "Share symptom history",
-    "sharing": {
-      "header": "Symptom history from {{startDate}} to {{endDate}}",
-      "no_symptoms_were_logged": "No symptoms were logged",
-      "you_did_not_feel_well": "You did not feel well, symptoms included: {{symptomList}}",
-      "you_felt_well": "You felt well"
-    },
-    "symptom_history": "Symptoms",
-    "to_protect_your_privacy": "To protect your privacy, entries are stored on your device and deleted automatically after {{days}} days."
-  },
   "symptom": {
     "bluish_lips_or_face": "Bluish lips or face",
     "congestion_or_runny_nose": "Congestion or runny nose",
@@ -570,6 +552,24 @@
     "persistent_pain_or_pressure_in_the_chest": "Persistent pain or pressure in the chest",
     "shortness_of_breath_or_difficulty_breathing": "Shortness of breath or difficulty breathing",
     "sore_throat": "Sore throat"
+  },
+  "symptom_history": {
+    "did_not_feel_well": "You did not feel well",
+    "errors": {
+      "updating_symptoms": "Sorry, we could not update your symptoms"
+    },
+    "felt_well": "You felt well",
+    "no_entry": "No entry",
+    "no_symptoms": "No symptoms",
+    "share_history": "Share symptom history",
+    "sharing": {
+      "header": "Symptom history from {{startDate}} to {{endDate}}",
+      "no_symptoms_were_logged": "No symptoms were logged",
+      "you_did_not_feel_well": "You did not feel well, symptoms included: {{symptomList}}",
+      "you_felt_well": "You felt well"
+    },
+    "symptom_history": "Symptoms",
+    "to_protect_your_privacy": "To protect your privacy, entries are stored on your device and deleted automatically after {{days}} days."
   },
   "verification_code_alerts": {
     "code_used_body": "The verification code provided has already been used.",
