--- a/src/locales/ht_HT.json
+++ b/src/locales/ht_HT.json
@@ -77,7 +77,11 @@
       }
     },
     "symptom_onset": {
-      "symptoms": "Sentòm yo"
+      "symptoms": "Sentòm yo",
+      "symptoms_list": {
+        "cough": "Tous",
+        "diarrhea": "Dyare"
+      }
     }
   },
   "exposure_history": {
