--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -97,6 +97,21 @@
         "no_token_for_existing_keys": "Существующие данные были отправлены на сервер. Обычно это означает, что этот процесс был предпринят ранее с этого устройства, но в другом приложении. Вы можете сообщить об этом органу, предоставившему использованный проверочный код. {{newKeysInserted}} новых ключей.",
         "no_token_for_existing_keys_title": "Попытка отправить существующие ключи"
       }
+    },
+    "symptom_onset": {
+      "symptoms_list": {
+        "congestion": "Заложенность носа или насморк",
+        "cough": "Кашель",
+        "diarrhea": "Диарея",
+        "fatigue": "Усталость",
+        "fever": "Жар или озноб",
+        "headaches ": "Головная боль",
+        "loss_of_taste_smell": "Новая потеря вкуса или запаха",
+        "muscle_aches": "Боли в мышцах или теле",
+        "nausea": "Тошнота или рвота",
+        "shortness_of_breath": "Одышка или затрудненное дыхание",
+        "sore_throat": "Боль в горле"
+      }
     }
   },
   "exposure_history": {
@@ -137,7 +152,6 @@
     "your_device_is_scanning": "Ваше устройство сканирует экспозиции и продолжит сканирование, даже если вы закроете приложение."
   },
   "home": {
-    "bluetooth_info_body": "Ваш телефон обнаруживает другие телефоны, с которыми вы проводите время в непосредственной близости, с помощью Bluetooth Low Energy. Это позволяет приложению анонимно регистрировать ваши ежедневные встречи, даже если приложение не открыто на вашем устройстве.",
     "bluetooth": {
       "all_services_on_subheader": "Уведомления об опасности включены",
       "location_disabled_error_message": "Чтобы активировать технологию уведомления о воздействии, разрешите доступ к местоположению в приложении «Настройки».",
@@ -151,6 +165,7 @@
       "tracing_off_subheader": "Включить уведомления об опасности, чтобы получать информацию о нахождении в опасных зонах",
       "tracing_on_header": "Обнаружение экспозиции включено"
     },
+    "bluetooth_info_body": "Ваш телефон обнаруживает другие телефоны, с которыми вы проводите время в непосредственной близости, с помощью Bluetooth Low Energy. Это позволяет приложению анонимно регистрировать ваши ежедневные встречи, даже если приложение не открыто на вашем устройстве.",
     "call_emergency_services": "Скорая помощь",
     "check_if_your_symptoms": "Введите свои симптомы и получите мгновенную рекомендацию о том, как оставаться в безопасности.",
     "enter_symptoms": "Введите симптомы",
@@ -205,7 +220,6 @@
     "notification_subheader3": "Это приложение не защищает вас от заражения COVID-19.",
     "please_read_the": "Пожалуйста, прочитайте",
     "privacy_policy": "Политика конфиденциальности",
-    "protect_privacy_button": "Как мы защищаем вашу конфиденциальность",
     "protect_privacy": {
       "body_1": "Эти идентификаторы не содержат никакой личной информации и меняются каждые 10-20 минут для защиты вашей личности.",
       "body_2": "Телефоны обмениваются случайными идентификаторами с другими устройствами с помощью Bluetooth Low Energy. Это позволяет {{applicationName}} анонимно отслеживать ваши ежедневные встречи, даже если оно не открыто на вашем устройстве.",
@@ -218,6 +232,7 @@
       "subheader_4": "Каждый телефон периодически прозванивает сервер на предмет списка помеченных идентификаторов и ищет совпадения",
       "subheader_5": "Вы получите уведомление, если {{applicationName}} найдет положительное совпадение с помеченным идентификатором."
     },
+    "protect_privacy_button": "Как мы защищаем вашу конфиденциальность",
     "proximity_tracing_body1": "Если смартфоны с установленным приложением включены, имеют включенный Bluetooth и находятся рядом друг с другом в течение определенного периода времени, на вашем устройстве регистрируется встреча.",
     "proximity_tracing_body2": "В случае встречи ваши данные и информация останутся анонимными. Приложение не хранит никаких личных данных. Обмен производится только случайными идентификаторами. Они удаляются через 14 дней.",
     "proximity_tracing_button": "Активировать уведомления об экспозиции",
@@ -375,24 +390,6 @@
     "share_anonymized_data": "Делитесь анонимными данными",
     "sharing_anonymized_data": "Обмен анонимными данными"
   },
-  "symptom_history": {
-    "did_not_feel_well": "Вы плохо себя чувствовали",
-    "errors": {
-      "updating_symptoms": "К сожалению, мы не смогли обновить ваши симптомы"
-    },
-    "felt_well": "Вы чувствовали себя хорошо",
-    "no_entry": "Нет входа",
-    "no_symptoms": "Нет симптомов",
-    "share_history": "Поделиться историей симптомов",
-    "sharing": {
-      "header": "История симптомов с {{startDate}} по {{endDate}}",
-      "no_symptoms_were_logged": "Симптомы не зарегистрированы",
-      "you_did_not_feel_well": "Вы плохо себя чувствовали, включая симптомы: {{symptomList}}",
-      "you_felt_well": "Вы чувствовали себя хорошо"
-    },
-    "symptom_history": "История симптомов",
-    "to_protect_your_privacy": "В целях защиты вашей конфиденциальности записи хранятся на вашем устройстве и автоматически удаляются через {{days}} дней."
-  },
   "symptom": {
     "bluish_lips_or_face": "Голубоватые губы или лицо",
     "congestion_or_runny_nose": "Заложенность носа или насморк",
@@ -410,5 +407,23 @@
     "persistent_pain_or_pressure_in_the_chest": "Постоянная боль или давление в груди",
     "shortness_of_breath_or_difficulty_breathing": "Одышка или затрудненное дыхание",
     "sore_throat": "Боль в горле"
+  },
+  "symptom_history": {
+    "did_not_feel_well": "Вы плохо себя чувствовали",
+    "errors": {
+      "updating_symptoms": "К сожалению, мы не смогли обновить ваши симптомы"
+    },
+    "felt_well": "Вы чувствовали себя хорошо",
+    "no_entry": "Нет входа",
+    "no_symptoms": "Нет симптомов",
+    "share_history": "Поделиться историей симптомов",
+    "sharing": {
+      "header": "История симптомов с {{startDate}} по {{endDate}}",
+      "no_symptoms_were_logged": "Симптомы не зарегистрированы",
+      "you_did_not_feel_well": "Вы плохо себя чувствовали, включая симптомы: {{symptomList}}",
+      "you_felt_well": "Вы чувствовали себя хорошо"
+    },
+    "symptom_history": "История симптомов",
+    "to_protect_your_privacy": "В целях защиты вашей конфиденциальности записи хранятся на вашем устройстве и автоматически удаляются через {{days}} дней."
   }
 }
