--- a/src/locales/ur.json
+++ b/src/locales/ur.json
@@ -45,7 +45,22 @@
       "unknown_code_verification_error": "نامعلوم تصدیق خامی",
       "verification_code_used": "تصدیقی کوڈ پہلے ہی استعمالہوچکا ہے "
     },
-    "publish_consent_title_bluetooth": "اپنی کمیونٹی میں دوسروں کو مطلع کریں"
+    "publish_consent_title_bluetooth": "اپنی کمیونٹی میں دوسروں کو مطلع کریں",
+    "symptom_onset": {
+      "symptoms_list": {
+        "congestion": "شہمٹب غممک پم غممک شمغر ہجغم ",
+        "cough": "کہمغوب ",
+        "diarrhea": "حمٹ عم رمدر ہجغم ",
+        "fatigue": "ٹہمکممغ ",
+        "fever": "شتکہمد ",
+        "headaches ": "وبد رمدر ",
+        "loss_of_taste_smell": "کہتوشجج پم عتمہ کم ٹموٹھ غم ہجغم ",
+        "muscle_aches": "عموحمےہبپم پم ابومع کھ ربکمٹ",
+        "nausea": "تیٹب ممغم پم ٹہمکمغ ہجغم ",
+        "shortness_of_breath": "وممو غم ممغھ پم وممو یھغم عم ربکمٹ ہجغم ",
+        "sore_throat": "لمیم عم رمدر "
+      }
+    }
   },
   "exposure_history": {
     "health_guidelines": {
@@ -65,7 +80,6 @@
     "why_did_i_get_an_en_para": "آپ کو ایکسپورور نوٹیفیکیشن موصول ہوگا جب آپ کے بعد قریب سے کسی کے پاس رہتے ہوئے COVID-19 کے لئے مثبت امتحان موصول ہوتا ہے اور دوسروں کو مطلع کرنے کا انتخاب کرتے ہیں۔"
   },
   "home": {
-    "bluetooth_info_body": "آپ کا فون دوسرے فونز کا پتہ لگاتا ہے جس کے بارے میں آپ بلوٹوتھ لو انرجی کے استعمال میں قریب وقت گزارتے ہیں۔ اس سے ایپ کو آپ کے یومیہ مقابلوں کو گمنامی میں لاگ ان کرنے کی اجازت دیتا ہے ، یہاں تک کہ جب آپ کے پاس اپنے آلے پر ایپ کھلی نہ ہو۔",
     "bluetooth": {
       "all_services_on_subheader": " ایپ بند ہونے کے بعد زیر عمل رہے گا",
       "proximity_tracing_header": "ایکسپوژر کی اطلاعات",
@@ -75,6 +89,7 @@
       "tracing_off_subheader": "ممکنہ ایکسپوژر کے بارے میں معلومات حاصل کرنے کے لئے بلوٹوتھ اور قربت سے متعلق ٹریسنگ کو فعال کریں",
       "tracing_on_header": "ایکسپوژر کی اطلاعات جاری ہے"
     },
+    "bluetooth_info_body": "آپ کا فون دوسرے فونز کا پتہ لگاتا ہے جس کے بارے میں آپ بلوٹوتھ لو انرجی کے استعمال میں قریب وقت گزارتے ہیں۔ اس سے ایپ کو آپ کے یومیہ مقابلوں کو گمنامی میں لاگ ان کرنے کی اجازت دیتا ہے ، یہاں تک کہ جب آپ کے پاس اپنے آلے پر ایپ کھلی نہ ہو۔",
     "proximity_tracing_info_body_1": "اگر انسٹال کردہ ایپ کے ساتھ اسمارٹ فونز آن ہوجاتے ہیں ، بلوٹوتھ کو فعال کرتے ہیں ، اور ایک دوسرے کے قریب ہوتے ہیں تو ، آپ کے آلے پر انکاؤنٹر رجسٹرڈ ہوتا ہے۔",
     "proximity_tracing_info_body_2": "انکاؤنٹر ہونے کی صورت میں ، آپ کا ڈیٹا اور معلومات گمنام ہی رہ جاتے ہیں۔ ایپ میں کوئی ذاتی ڈیٹا ذخیرہ نہیں ہوتا ہے۔ صرف بے ترتیب شناختوں کا تبادلہ ہوتا ہے۔ یہ 14 دن کے اندر حذف ہوجاتے ہیں۔",
     "proximity_tracing_info_subheader_1": "نمائش کی اطلاعات کیسے کام کرتی ہیں؟",
@@ -101,7 +116,6 @@
     "notification_subheader1": "مجھے کب مطلع کیا جائے گا؟",
     "notification_subheader2": "یہ کیسے کام کرتا ہے؟",
     "notification_subheader3": "یہ ایپ آپ کو کوڈ 19 انفیکشن سے محفوظ نہیں رکھتی ہے۔",
-    "protect_privacy_button": "ہم کس طرح آپ کی رازداری کا تحفظ کرتے ہیں",
     "protect_privacy": {
       "body_1": "ان شناختوں میں کوئی ذاتی معلومات شامل نہیں ہیں اور آپ کی شناخت کے تحفظ کے لئے ہر 10-20 منٹ میں تبدیل ہوتی ہیں۔",
       "body_2": "فون بلوٹوتھ لو انرجی کا استعمال کرتے ہوئے دوسرے آلات کے ساتھ بے ترتیب IDs تبدیل کرتا ہے۔ اس سے {{applicationName}} اپنے روزمرہ مقابلوں کو گمنامی سے باخبر رکھنے {{applicationName}} سہولت دیتا ہے ، یہاں تک کہ جب آپ کے پاس اپنے آلے پر کھولیئے نہ ہوں۔",
@@ -114,6 +128,7 @@
       "subheader_4": "ہر فون وقتا فوقتا پرچم لگانے والی شناختوں کی فہرست کے ل p سرور کو دم کرتا ہے اور میچوں کی تلاش کرتا ہے",
       "subheader_5": "اگر آپ کو مطلع کیا جائے گا اگر 1: ایپلی کیشن نام میں جھنڈے والی ID کے ساتھ ایک مثبت میچ مل گیا ہے"
     },
+    "protect_privacy_button": "ہم کس طرح آپ کی رازداری کا تحفظ کرتے ہیں",
     "proximity_tracing_body1": "اگر انسٹال کردہ ایپ والے اسمارٹ فونز آن ، آن لائن بلوٹوتھ کو فعال ، اور ایک دوسرے کے قریب ہوتے ہیں تو ، آپ کے آلے پر انکاؤنٹر درج ہوتا ہے۔",
     "proximity_tracing_body2": "انکاؤنٹر ہونے کی صورت میں ، آپ کا ڈیٹا اور معلومات گمنام ہی رہ جاتے ہیں۔ ایپ میں کوئی ذاتی ڈیٹا ذخیرہ نہیں ہوتا ہے۔ صرف بے ترتیب شناختوں کا تبادلہ ہوتا ہے۔ یہ 14 دن کے اندر حذف ہوجاتے ہیں۔",
     "proximity_tracing_button": "ایکسپوژر کی اطلاعات کو چالو کریں",
