--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -133,6 +133,19 @@
       "did_you_have_symptoms": "Είχατε συμπτώματα;",
       "no_i_didnt_have": "Όχι, δεν είχα κανένα σύμπτωμα.",
       "symptoms": "Συμπτώματα",
+      "symptoms_list": {
+        "congestion": "Συμφόρηση ή ρινική καταρροή",
+        "cough": "Βήχας",
+        "diarrhea": "Διάρροια",
+        "fatigue": "Κόπωση",
+        "fever": "Πυρετός ή ρίγη",
+        "headaches ": "Πονοκέφαλος",
+        "loss_of_taste_smell": "Νέα απώλεια γεύσης ή οσμής",
+        "muscle_aches": "Μυϊκοί πόνοι ή πόνοι στο σώμα",
+        "nausea": "Ναυτία ή έμετος",
+        "shortness_of_breath": "Δύσπνοια ή δυσκολία στην αναπνοή",
+        "sore_throat": "Πονόλαιμος"
+      },
       "when_did_your_symptoms": "Πότε ξεκίνησαν τα συμπτώματά σας;",
       "yes_i_did_have": "Ναι, είχα συμπτώματα"
     },
@@ -198,7 +211,6 @@
     "your_device_is_scanning": "Η συσκευή σας πραγματοποιεί σάρωση για εκθέσεις και θα συνεχίσει να το κάνει ακόμα και αν κλείσετε την εφαρμογή."
   },
   "home": {
-    "bluetooth_info_body": "Το τηλέφωνό σας εντοπίζει τηλέφωνα, με τα οποία βρίσκεται για ορισμένο χρόνο σε κοντινή απόσταση, με τη χρήση Bluetooth χαμηλής ενέργειας. Αυτό επιτρέπει στην εφαρμογή να καταγράφει στο ημερολόγιό σας καθημερινές συναντήσεις ανώνυμα, ακόμη και όταν δεν έχετε ανοιχτή την εφαρμογή στη συσκευή σας.",
     "bluetooth": {
       "all_services_on_subheader": "Η Εφαρμογή {{applicationName}} θα παραμείνει ενεργή μετά το κλείσιμό της",
       "location_disabled_error_message": "Για να ενεργοποιήσετε την τεχνολογία ειδοποίησης έκθεσης, εξουσιοδοτήστε την πρόσβαση τοποθεσίας στις Ρυθμίσεις της Εφαρμογής",
@@ -212,6 +224,7 @@
       "tracing_off_subheader": "Ενεργοποιήστε το Bluetooth και την Ανίχνευση Εγγύτητας για να λάβετε πληροφορίες σχετικά με πιθανές εκθέσεις",
       "tracing_on_header": "Ανίχνευση έκθεσης ενεργή"
     },
+    "bluetooth_info_body": "Το τηλέφωνό σας εντοπίζει τηλέφωνα, με τα οποία βρίσκεται για ορισμένο χρόνο σε κοντινή απόσταση, με τη χρήση Bluetooth χαμηλής ενέργειας. Αυτό επιτρέπει στην εφαρμογή να καταγράφει στο ημερολόγιό σας καθημερινές συναντήσεις ανώνυμα, ακόμη και όταν δεν έχετε ανοιχτή την εφαρμογή στη συσκευή σας.",
     "call_emergency_services": "Καλέστε Υπηρεσίες Άμεσης Βοήθειας",
     "check_if_your_symptoms": "Εισαγάγετε τα συμπτώματά σας και λάβετε μια άμεση σύσταση για το πώς να παραμείνετε ασφαλείς.",
     "enter_symptoms": "Εισαγωγή συμπτωμάτων",
@@ -274,7 +287,6 @@
     "notification_subheader3": "Αυτή η εφαρμογή δεν σας προστατεύει από τη λοίμωξη του COVID-19.",
     "please_read_the": "Παρακαλούμε διαβάστε το",
     "privacy_policy": "Πολιτική Απορρήτου",
-    "protect_privacy_button": "Πώς προστατεύουμε τα προσωπικά σας δεδομένα",
     "protect_privacy": {
       "body_1": "Αυτά τα αναγνωριστικά δεν περιέχουν προσωπικά στοιχεία και αλλάζουν κάθε 10-20 λεπτά για να προστατεύσουν την ταυτότητά σας.",
       "body_2": "Τα τηλέφωνα ανταλλάσσουν τυχαία αναγνωριστικά με άλλες συσκευές που χρησιμοποιούν Bluetooth χαμηλής ενέργειας. Αυτό επιτρέπει στην Εφαρμογή {{applicationName}} να παρακολουθεί ανώνυμα τις καθημερινές σας συναντήσεις, ακόμα και όταν δεν το έχετε ανοιχτό στη συσκευή σας.",
@@ -287,6 +299,7 @@
       "subheader_4": "Κάθε τηλέφωνο καλεί περιοδικά τον διακομιστή για τη λίστα των επισημασμένων κωδικών και αναζητά ταιριάσματα",
       "subheader_5": "Θα ειδοποιηθείτε εάν η {{applicationName}} εντοπίσει θετική αντιστοίχιση με επισημασμένο αναγνωριστικό"
     },
+    "protect_privacy_button": "Πώς προστατεύουμε τα προσωπικά σας δεδομένα",
     "proximity_tracing_already_active": "Οι ειδοποιήσεις έκθεσης είναι ενεργές",
     "proximity_tracing_body1": "Αν τα smartphones με εγκατεστημένη την εφαρμογή είναι ενεργοποιημένα, έχουν ενεργοποιημένο το bluetooth και βρίσκονται κοντά το ένα στο άλλο για ένα χρονικό διάστημα, καταχωρείται στη συσκευή σας μια συνάντηση.",
     "proximity_tracing_body2": "Σε περίπτωση συνάντησης, τα δεδομένα και οι πληροφορίες παραμένουν ανώνυμα. Η εφαρμογή δεν αποθηκεύει προσωπικά δεδομένα. Ανταλλάσσονται μόνο τυχαία αναγνωριστικά. Αυτά διαγράφονται εντός 14 ημερών.",
@@ -446,24 +459,6 @@
     "share_anonymized_data": "Κοινοποίηση ανώνυμων δεδομένων",
     "sharing_anonymized_data": "Κοινή χρήση ανώνυμων δεδομένων"
   },
-  "symptom_history": {
-    "did_not_feel_well": "Δεν αισθανθήκατε καλά",
-    "errors": {
-      "updating_symptoms": "Λυπούμαστε, δεν ήταν δυνατή η ενημέρωση των συμπτωμάτων σας"
-    },
-    "felt_well": "Αισθανθήκατε καλά",
-    "no_entry": "Δεν υπάρχει καταχώρηση",
-    "no_symptoms": "Δεν υπάρχουν συμπτώματα",
-    "share_history": "Κοινοποίηση ιστορικού συμπτωμάτων",
-    "sharing": {
-      "header": "Ιστορικό συμπτωμάτων από {{startDate}} έως {{endDate}}",
-      "no_symptoms_were_logged": "Δεν καταγράφηκαν συμπτώματα",
-      "you_did_not_feel_well": "Δεν αισθανόσασταν καλά, συμπεριλαμβανομένων των συμπτωμάτων: {{symptomList}}",
-      "you_felt_well": "Αισθανθήκατε καλά"
-    },
-    "symptom_history": "Συμπτώματα",
-    "to_protect_your_privacy": "Για την προστασία του απορρήτου σας, οι καταχωρήσεις αποθηκεύονται στη συσκευή σας και διαγράφονται αυτόματα μετά από {{days}} ημέρες."
-  },
   "symptom": {
     "bluish_lips_or_face": "Μπλε χείλη ή πρόσωπο",
     "congestion_or_runny_nose": "Συμφόρηση ή ρινική καταρροή",
@@ -481,6 +476,24 @@
     "persistent_pain_or_pressure_in_the_chest": "Επίμονος πόνος ή πίεση στο στήθος",
     "shortness_of_breath_or_difficulty_breathing": "Δύσπνοια ή δυσκολία στην αναπνοή",
     "sore_throat": "Πονόλαιμος"
+  },
+  "symptom_history": {
+    "did_not_feel_well": "Δεν αισθανθήκατε καλά",
+    "errors": {
+      "updating_symptoms": "Λυπούμαστε, δεν ήταν δυνατή η ενημέρωση των συμπτωμάτων σας"
+    },
+    "felt_well": "Αισθανθήκατε καλά",
+    "no_entry": "Δεν υπάρχει καταχώρηση",
+    "no_symptoms": "Δεν υπάρχουν συμπτώματα",
+    "share_history": "Κοινοποίηση ιστορικού συμπτωμάτων",
+    "sharing": {
+      "header": "Ιστορικό συμπτωμάτων από {{startDate}} έως {{endDate}}",
+      "no_symptoms_were_logged": "Δεν καταγράφηκαν συμπτώματα",
+      "you_did_not_feel_well": "Δεν αισθανόσασταν καλά, συμπεριλαμβανομένων των συμπτωμάτων: {{symptomList}}",
+      "you_felt_well": "Αισθανθήκατε καλά"
+    },
+    "symptom_history": "Συμπτώματα",
+    "to_protect_your_privacy": "Για την προστασία του απορρήτου σας, οι καταχωρήσεις αποθηκεύονται στη συσκευή σας και διαγράφονται αυτόματα μετά από {{days}} ημέρες."
   },
   "verification_code_alerts": {
     "code_used_body": "Ο κωδικός επαλήθευσης έχει ήδη χρησιμοποιηθεί",
